# asd

./: README.md
practical-work-1/: README.md
practical-work-1/enonce/: README.md  test.csv
practical-work-1/rapport/: README.md  csv_to_svg.xlsx
practical-work-1/rapport/csv/: operation_count_almost.csv  operation_count_decreasing.csv  operation_count_increasing.csv  operation_count_random.csv  time_measurement_almost.csv  time_measurement_decreasing.csv  time_measurement_increasing.csv  time_measurement_random.csv
practical-work-1/src/: CMakeLists.txt  OpCounter.h  OpCounterImpl.h  customSorts.h  generateVector.h  mainCountComparisonAndAffectation.cpp  mainTestCustomSorts.cpp  mainTimeMeasurement.cpp
practical-work-2/: README.md
practical-work-2/src/: ArrayDeque.h  CMakeLists.txt
practical-work-2/txt/: cc4.txt
practical-work-3/: README.md
practical-work-3/src/: CMakeLists.txt  avlNode.h  avlNodeImplementation.h  avlTree.h  avlTreeImplementation.h  main.cpp
practical-work-3/src/catch2_tests/: avlTest.cpp
